<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_border_rounded_cornwe"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:text="@string/titleTestUploadFiles"
            android:textColor="@color/orangeKauel"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edtNameServerTesting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/orangeKauel"
            android:textSize="13sp"
            android:textStyle="bold"
            tools:text="TESTING" />

        <ImageView
            android:id="@+id/imgUpload"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/cloud_upload" />

        <ProgressBar
            android:id="@+id/pbLoadingUpload"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:max="11"
            android:progressTint="@color/blue"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_border_rounded_cornwe">

                <TextView
                    android:id="@+id/edtPathFiles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/folderIcon"
                    android:background="@android:color/transparent"
                    android:ellipsize="end"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="12sp"
                    tools:text="@string/localPath" />

                <ImageView
                    android:id="@+id/folderIcon"
                    android:layout_width="20.7dp"
                    android:layout_height="20.3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/folder" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlDateStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/blue_border_rounded_cornwe">

                <TextView
                    android:id="@+id/edtDateStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/dateStartIcon"
                    android:background="@android:color/transparent"
                    android:ellipsize="end"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="12sp"
                    tools:text="@string/dateStart" />

                <ImageView
                    android:id="@+id/dateStartIcon"
                    android:layout_width="20.7dp"
                    android:layout_height="20.3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/date_range" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlDateEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/blue_border_rounded_cornwe">

                <TextView
                    android:id="@+id/edtDateEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/dateEndIcon"
                    android:background="@android:color/transparent"
                    android:ellipsize="end"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="12sp"
                    tools:text="@string/dateEnd" />

                <ImageView
                    android:id="@+id/dateEndIcon"
                    android:layout_width="20.7dp"
                    android:layout_height="20.3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/date_range" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/blue_border_rounded_cornwe">

                <TextView
                    android:id="@+id/edtTimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/timerIcon"
                    android:background="@android:color/transparent"
                    android:ellipsize="end"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="12sp"
                    tools:text="@string/timer" />

                <ImageView
                    android:id="@+id/timerIcon"
                    android:layout_width="20.7dp"
                    android:layout_height="20.3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/timer" />

            </RelativeLayout>

            <Button
                android:id="@+id/btnChoosePath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/blue_fill__rounded_color"
                android:text="@string/chooseFile"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>